# songsim-campus-mcp

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.codex/: config.toml
data/: campus_walk_graph.json  personalization_rules.json  place_alias_overrides.json  place_facility_keywords.json  place_short_query_preferences.json  restaurant_search_aliases.json  restaurant_search_noise_terms.json  sample_courses.json  sample_notices.json  sample_places.json  sample_restaurants.json
docs/: codex_tasks.md  connect-chatgpt.md  connect-claude.md  connect-codex.md  deploy-render.md  roadmap.md  source_registry.md
tests/: conftest.py  test_about_resource_guides.py  test_academic_milestone_guides.py  test_admin_sync.py  test_affiliated_notices.py  test_anniversary_guides.py  test_api.py  test_api_metadata.py  test_automation.py  test_campus_life_notices.py  test_campus_life_support_guides.py  test_class_guides.py  test_course_search_runtime.py  test_db.py  test_dormitory_guides.py  test_gpt_actions_v3.py  test_ingest.py  test_mcp.py  test_mcp_oauth.py  test_mcp_public_catalog.py  test_mcp_public_serializers.py  test_mcp_tool_catalog.py  test_newsroom_posts.py  test_newsroom_resource_guides.py  test_observability.py  test_pc_software.py  test_personalization.py  test_personalization_api.py  test_phone_book.py  test_place_search_runtime.py  test_profile_meal_runtime.py  test_public_journey_services.py  test_qa_eval.py  test_registration_guides.py  test_research_posts.py  test_restaurant_nearby_runtime.py  (+14 more)
(+179 files in other folders)
